# Praguematic

./: .gitignore  README.md  pyproject.toml  tox.ini
src/praguematic/: __init__.py  _client.py  _common.py  _models.py
