[project]
name = "Praguematic"
version = "0.1.0"
description = "A simple wrapper over the Golemio API Waste Collection endoint."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Konstantin Mykhailov", email = "constantinemykhailov@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Czech",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = ["golemio", "sorted waste", "waste stations"]
requires-python = ">=3.8"
dependencies = [
    "aiolimiter>=1.2.1",
    "haversine>=2.9.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.3",
    "typing_extensions>=4.3; python_version<'3.11'",
]

[project.urls]
"Homepage" = "https://github.com/mykhakos/Praguematic"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_copybutton",
  "autodoc-pydantic",
  "sphinx_rtd_theme",
]
lint = [
  "mypy",
  "ruff",
]
test = [
  "pytest",
  "pytest-asyncio",
]
build = [
  "build",
  "twine",
]
dev = [
    "tox",
    "freshpointsync[lint]",
    "freshpointsync[test]",
    "freshpointsync[doc]",
    "freshpointsync[build]",
]

[options]
package_dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
  "A", "ANN", "ASYNC", "B", "BLE", "COM", "D", "E", "F", "I", "N", "PL", "RUF",
  "S", "UP", "W", "YTT"
]
ignore = [
  # Documenting dunder methods might not add much value.
  "D105",
  # Docstring-related, too restrictive.
  "D205",
  # Docstring-related; these have conflicting rules.
  "D203", "D213",
  # Ignore too long lines (long lines are handled by the formatter)
  "E501",
  # Asserts can be used for internal consistency checking.
  "S101", "B011",
  # Catching Exception is valid and safe in some cases.
  "BLE001",
  # Related to comment formatting, may conflict with code formatters.
  "COM812",
  # Too-many-xx rules, may be too restrictive for more complex code bases.
  "PLR0904", "PLR0911", "PLR0912", "PLR0913", "PLR0917", "PLR2004", "PLR1702",
  "PLR0915",
  # Ignore PEP 604 syntax suggestions, as they are not available in py38.
  "UP007",
]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "D100", "D101", "D102", "D103", "D104", "S101", "S106", "ANN001", "ANN002",
  "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "PLR6301",
]
"docs/source/conf.py" = ["D100", "D103", "A001", "ANN201", "ANN001"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
preview = true

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
